chipy8/Chipy8Parser.py
# Generated from Chipy8.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class Chipy8Parser ( Parser ):

    grammarFileName = "Chipy8.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'**'", "'**='", "'//'", "'def'", 
                     "'return'", "'if'", "'elif'", "'else'", "'while'", 
                     "'or'", "'and'", "'not'", "'del'", "'pass'", "'continue'", 
                     "'break'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "','", "':'", 
                     "';'", "'='", "'['", "']'", "'|'", "'^'", "'&'", "'<<'", 
                     "'>>'", "'+'", "'-'", "'/'", "'%'", "'~'", "'{'", "'}'", 
                     "'<'", "'>'", "'=='", "'>='", "'<='", "'<>'", "'!='", 
                     "'->'", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", 
                     "'|='", "'^='", "'<<='", "'>>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "DEF", "RETURN", "IF", "ELIF", "ELSE", 
                      "WHILE", "OR", "AND", "NOT", "DEL", "PASS", "CONTINUE", 
                      "BREAK", "NEWLINE", "NAME", "DECIMAL_INTEGER", "OCT_INTEGER", 
                      "HEX_INTEGER", "BIN_INTEGER", "OPEN_PAREN", "CLOSE_PAREN", 
                      "COMMA", "COLON", "SEMI_COLON", "ASSIGN", "OPEN_BRACK", 
                      "CLOSE_BRACK", "OR_OP", "XOR", "AND_OP", "LEFT_SHIFT", 
                      "RIGHT_SHIFT", "ADD", "MINUS", "DIV", "MOD", "NOT_OP", 
                      "OPEN_BRACE", "CLOSE_BRACE", "LESS_THAN", "GREATER_THAN", 
                      "EQUALS", "GT_EQ", "LT_EQ", "NOT_EQ_1", "NOT_EQ_2", 
                      "ARROW", "ADD_ASSIGN", "SUB_ASSIGN", "MULT_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", 
                      "XOR_ASSIGN", "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", 
                      "SKIP_", "UNKNOWN_CHAR", "INDENT", "DEDENT" ]

    RULE_single_input = 0
    RULE_file_input = 1
    RULE_eval_input = 2
    RULE_funcdef = 3
    RULE_parameters = 4
    RULE_typedargslist = 5
    RULE_tfpdef = 6
    RULE_varargslist = 7
    RULE_vfpdef = 8
    RULE_stmt = 9
    RULE_simple_stmt = 10
    RULE_small_stmt = 11
    RULE_expr_stmt = 12
    RULE_testlist_star_expr = 13
    RULE_augassign = 14
    RULE_del_stmt = 15
    RULE_pass_stmt = 16
    RULE_flow_stmt = 17
    RULE_break_stmt = 18
    RULE_continue_stmt = 19
    RULE_return_stmt = 20
    RULE_compound_stmt = 21
    RULE_if_stmt = 22
    RULE_while_stmt = 23
    RULE_suite = 24
    RULE_test = 25
    RULE_test_nocond = 26
    RULE_or_test = 27
    RULE_and_test = 28
    RULE_not_test = 29
    RULE_comparison = 30
    RULE_comp_op = 31
    RULE_star_expr = 32
    RULE_expr = 33
    RULE_xor_expr = 34
    RULE_and_expr = 35
    RULE_shift_expr = 36
    RULE_arith_expr = 37
    RULE_term = 38
    RULE_factor = 39
    RULE_atom = 40
    RULE_testlist_comp = 41
    RULE_exprlist = 42
    RULE_testlist = 43
    RULE_dictorsetmaker = 44
    RULE_arglist = 45
    RULE_argument = 46
    RULE_comp_if = 47
    RULE_integer = 48

    ruleNames =  [ "single_input", "file_input", "eval_input", "funcdef", 
                   "parameters", "typedargslist", "tfpdef", "varargslist", 
                   "vfpdef", "stmt", "simple_stmt", "small_stmt", "expr_stmt", 
                   "testlist_star_expr", "augassign", "del_stmt", "pass_stmt", 
                   "flow_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "compound_stmt", "if_stmt", "while_stmt", "suite", "test", 
                   "test_nocond", "or_test", "and_test", "not_test", "comparison", 
                   "comp_op", "star_expr", "expr", "xor_expr", "and_expr", 
                   "shift_expr", "arith_expr", "term", "factor", "atom", 
                   "testlist_comp", "exprlist", "testlist", "dictorsetmaker", 
                   "arglist", "argument", "comp_if", "integer" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    DEF=5
    RETURN=6
    IF=7
    ELIF=8
    ELSE=9
    WHILE=10
    OR=11
    AND=12
    NOT=13
    DEL=14
    PASS=15
    CONTINUE=16
    BREAK=17
    NEWLINE=18
    NAME=19
    DECIMAL_INTEGER=20
    OCT_INTEGER=21
    HEX_INTEGER=22
    BIN_INTEGER=23
    OPEN_PAREN=24
    CLOSE_PAREN=25
    COMMA=26
    COLON=27
    SEMI_COLON=28
    ASSIGN=29
    OPEN_BRACK=30
    CLOSE_BRACK=31
    OR_OP=32
    XOR=33
    AND_OP=34
    LEFT_SHIFT=35
    RIGHT_SHIFT=36
    ADD=37
    MINUS=38
    DIV=39
    MOD=40
    NOT_OP=41
    OPEN_BRACE=42
    CLOSE_BRACE=43
    LESS_THAN=44
    GREATER_THAN=45
    EQUALS=46
    GT_EQ=47
    LT_EQ=48
    NOT_EQ_1=49
    NOT_EQ_2=50
    ARROW=51
    ADD_ASSIGN=52
    SUB_ASSIGN=53
    MULT_ASSIGN=54
    DIV_ASSIGN=55
    MOD_ASSIGN=56
    AND_ASSIGN=57
    OR_ASSIGN=58
    XOR_ASSIGN=59
    LEFT_SHIFT_ASSIGN=60
    RIGHT_SHIFT_ASSIGN=61
    SKIP_=62
    UNKNOWN_CHAR=63
    INDENT=64
    DEDENT=65

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Single_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(Chipy8Parser.NEWLINE, 0)

        def simple_stmt(self):
            return self.getTypedRuleContext(Chipy8Parser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(Chipy8Parser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return Chipy8Parser.RULE_single_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_input" ):
                listener.enterSingle_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_input" ):
                listener.exitSingle_input(self)




    def single_input(self):

        localctx = Chipy8Parser.Single_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_single_input)
        try:
            self.state = 103
            token = self._input.LA(1)
            if token in [Chipy8Parser.NEWLINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(Chipy8Parser.NEWLINE)

            elif token in [Chipy8Parser.T__0, Chipy8Parser.RETURN, Chipy8Parser.NOT, Chipy8Parser.DEL, Chipy8Parser.PASS, Chipy8Parser.CONTINUE, Chipy8Parser.BREAK, Chipy8Parser.ADD, Chipy8Parser.MINUS, Chipy8Parser.NOT_OP]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.simple_stmt()

            elif token in [Chipy8Parser.DEF, Chipy8Parser.IF, Chipy8Parser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.compound_stmt()
                self.state = 101
                self.match(Chipy8Parser.NEWLINE)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class File_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Chipy8Parser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(Chipy8Parser.NEWLINE)
            else:
                return self.getToken(Chipy8Parser.NEWLINE, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Chipy8Parser.StmtContext)
            else:
                return self.getTypedRuleContext(Chipy8Parser.StmtContext,i)


        def getRuleIndex(self):
            return Chipy8Parser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)




    def file_input(self):

        localctx = Chipy8Parser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Chipy8Parser.T__0) | (1 << Chipy8Parser.DEF) | (1 << Chipy8Parser.RETURN) | (1 << Chipy8Parser.IF) | (1 << Chipy8Parser.WHILE) | (1 << Chipy8Parser.NOT) | (1 << Chipy8Parser.DEL) | (1 << Chipy8Parser.PASS) | (1 << Chipy8Parser.CONTINUE) | (1 << Chipy8Parser.BREAK) | (1 << Chipy8Parser.NEWLINE) | (1 << Chipy8Parser.ADD) | (1 << Chipy8Parser.MINUS) | (1 << Chipy8Parser.NOT_OP))) != 0):
                self.state = 107
                token = self._input.LA(1)
                if token in [Chipy8Parser.NEWLINE]:
                    self.state = 105
                    self.match(Chipy8Parser.NEWLINE)

                elif token in [Chipy8Parser.T__0, Chipy8Parser.DEF, Chipy8Parser.RETURN, Chipy8Parser.IF, Chipy8Parser.WHILE, Chipy8Parser.NOT, Chipy8Parser.DEL, Chipy8Parser.PASS, Chipy8Parser.CONTINUE, Chipy8Parser.BREAK, Chipy8Parser.ADD, Chipy8Parser.MINUS, Chipy8Parser.NOT_OP]:
                    self.state = 106
                    self.stmt()

                else:
                    raise NoViableAltException(self)

                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(Chipy8Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Eval_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testlist(self):
            return self.getTypedRuleContext(Chipy8Parser.TestlistContext,0)


        def EOF(self):
            return self.getToken(Chipy8Parser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(Chipy8Parser.NEWLINE)
            else:
                return self.getToken(Chipy8Parser.NEWLINE, i)

        def getRuleIndex(self):
            return Chipy8Parser.RULE_eval_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEval_input" ):
                listener.enterEval_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEval_input" ):
                listener.exitEval_input(self)




    def eval_input(self):

        localctx = Chipy8Parser.Eval_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_eval_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.testlist()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Chipy8Parser.NEWLINE:
                self.state = 115
                self.match(Chipy8Parser.NEWLINE)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(Chipy8Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(Chipy8Parser.DEF, 0)

        def NAME(self):
            return self.getToken(Chipy8Parser.NAME, 0)

        def parameters(self):
            return self.getTypedRuleContext(Chipy8Parser.ParametersContext,0)


        def suite(self):
            return self.getTypedRuleContext(Chipy8Parser.SuiteContext,0)


        def test(self):
            return self.getTypedRuleContext(Chipy8Parser.TestContext,0)


        def getRuleIndex(self):
            return Chipy8Parser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)




    def funcdef(self):

        localctx = Chipy8Parser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(Chipy8Parser.DEF)
            self.state = 124
            self.match(Chipy8Parser.NAME)
            self.state = 125
            self.parameters()
            self.state = 128
            _la = self._input.LA(1)
            if _la==Chipy8Parser.ARROW:
                self.state = 126
                self.match(Chipy8Parser.ARROW)
                self.state = 127
                self.test()


            self.state = 130
            self.match(Chipy8Parser.COLON)
            self.state = 131
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typedargslist(self):
            return self.getTypedRuleContext(Chipy8Parser.TypedargslistContext,0)


        def getRuleIndex(self):
            return Chipy8Parser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = Chipy8Parser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(Chipy8Parser.OPEN_PAREN)
            self.state = 135
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Chipy8Parser.T__0) | (1 << Chipy8Parser.T__1) | (1 << Chipy8Parser.NAME))) != 0):
                self.state = 134
                self.typedargslist()


            self.state = 137
            self.match(Chipy8Parser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypedargslistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tfpdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Chipy8Parser.TfpdefContext)
            else:
                return self.getTypedRuleContext(Chipy8Parser.TfpdefContext,i)


        def test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Chipy8Parser.TestContext)
            else:
                return self.getTypedRuleContext(Chipy8Parser.TestContext,i)


        def getRuleIndex(self):
            return Chipy8Parser.RULE_typedargslist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedargslist" ):
                listener.enterTypedargslist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedargslist" ):
                listener.exitTypedargslist(self)




    def typedargslist(self):

        localctx = Chipy8Parser.TypedargslistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typedargslist)
        self._la = 0 # Token type
        try:
            self.state = 204
            token = self._input.LA(1)
            if token in [Chipy8Parser.NAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.tfpdef()
                self.state = 142
                _la = self._input.LA(1)
                if _la==Chipy8Parser.ASSIGN:
                    self.state = 140
                    self.match(Chipy8Parser.ASSIGN)
                    self.state = 141
                    self.test()


                self.state = 152
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 144
                        self.match(Chipy8Parser.COMMA)
                        self.state = 145
                        self.tfpdef()
                        self.state = 148
                        _la = self._input.LA(1)
                        if _la==Chipy8Parser.ASSIGN:
                            self.state = 146
                            self.match(Chipy8Parser.ASSIGN)
                            self.state = 147
                            self.test()

                 
                    self.state = 154
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                self.state = 180
                _la = self._input.LA(1)
                if _la==Chipy8Parser.COMMA:
                    self.state = 155
                    self.match(Chipy8Parser.COMMA)
                    self.state = 178
                    token = self._input.LA(1)
                    if token in [Chipy8Parser.T__0]:
                        self.state = 156
                        self.match(Chipy8Parser.T__0)
                        self.state = 158
                        _la = self._input.LA(1)
                        if _la==Chipy8Parser.NAME:
                            self.state = 157
                            self.tfpdef()


                        self.state = 168
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt==1:
                                self.state = 160
                                self.match(Chipy8Parser.COMMA)
                                self.state = 161
                                self.tfpdef()
                                self.state = 164
                                _la = self._input.LA(1)
                                if _la==Chipy8Parser.ASSIGN:
                                    self.state = 162
                                    self.match(Chipy8Parser.ASSIGN)
                                    self.state = 163
                                    self.test()

                         
                            self.state = 170
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                        self.state = 174
                        _la = self._input.LA(1)
                        if _la==Chipy8Parser.COMMA:
                            self.state = 171
                            self.match(Chipy8Parser.COMMA)
                            self.state = 172
                            self.match(Chipy8Parser.T__1)
                            self.state = 173
                            self.tfpdef()


                        pass
                    elif token in [Chipy8Parser.T__1]:
                        self.state = 176
                        self.match(Chipy8Parser.T__1)
                        self.state = 177
                        self.tfpdef()
                        pass
                    elif token in [Chipy8Parser.CLOSE_PAREN]:
                        pass
                    else:
                        raise NoViableAltException(self)


